# Quantum-Shield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRATES_IO_GUIDE.md  Cargo.toml  HARDCODED_REFERENCES.md  INSTALL.md  INSTRUCTIONS.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  mlkem1024.pk  mlkem1024.sk  setup-github.sh
.github/workflows/: ci.yml  ci_gcm.yaml  release.yml
crates/qsfs-cli/: Cargo.toml  README.md
crates/qsfs-core/: Cargo.toml  README.md
crates/qsfs-core/src/: canonical.rs  lib.rs  pae.rs  pq.rs
crates/qsfs-core/tests/: kat_v2.rs  neg_v2.rs
crates/quantum-shield/src/: streaming.rs
docs/: CRYPTO-SPEC-v2.md  api.md  format.md  migration.md  performance.md  security.md  signatures.md  trust-store.md
quantum-shield/Quantum-Shield/vectors/: kat_v2.schema.json
script/: install.sh  setup.sh
scripts/: qsfs_kat_verify.py
tools/verify-kat/: Cargo.toml
tools/verify-kat/src/: main.rs
vectors/: kat_v2.example.json
