[workspace]
members = [
  "crates/qsfs-core",
  "crates/qsfs-cli",
  "tools/verify-kat",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"
homepage = "https://github.com/AnubisQuantumCipher/quantum-shield"
repository = "https://github.com/AnubisQuantumCipher/quantum-shield"
categories = ["cryptography", "command-line-utilities"]
keywords = ["cryptography", "post-quantum", "aead", "ml-kem", "ml-dsa"]
authors = ["AnubisQuantumCipher"]

[workspace.metadata.cargo-audit]
ignore = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.dev]
debug = 2
overflow-checks = true
