[package]
name = "qsfs-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["pq", "hybrid-x25519", "gcm-siv"]
pq = ["pqcrypto-mlkem", "pqcrypto-mldsa", "pqcrypto-traits"]
hybrid-x25519 = ["x25519-dalek", "ed25519-dalek"]
cascade = ["chacha20poly1305"]
gcm = []
gcm-siv = ["aes-gcm-siv"]
hsm = ["cryptoki"]
wasm = ["getrandom/js"]

[dependencies]
aead = "0.5"
aes-gcm = { version = "0.10", features = ["aes","heapless"] }
aes-gcm-siv = { version = "0.11", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
hkdf = "0.12"
sha3 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
postcard = { version = "1.0", default-features = false, features = ["use-std"] }
anyhow = "1.0"
thiserror = "1.0"
getrandom = "0.2"
rand = "0.8"
rand_core = "0.6"
tokio = { version = "1.38", features = ["fs","io-util","rt-multi-thread"] }
futures = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
tempfile = "3.10"
libc = "0.2"

# PQ stacks (FIPS 203/204)
pqcrypto-mlkem = { version = "0.1", optional = true }   # ML-KEM (Kyber), FIPS 203
pqcrypto-mldsa = { version = "0.1", optional = true }   # ML-DSA (Dilithium), FIPS 204
pqcrypto-traits = { version = "0.3", optional = true }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
dirs = "5.0"
serde_json = "1.0"

# Classical hybrid (non‑CNSA; additive only)
x25519-dalek = { version = "2.0", optional = true, default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2", optional = true, features = ["rand_core"] }

# HSM / PKCS#11 hook
cryptoki = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = "3.10"
hex-literal = "0.4"
